--- a/readme.rm
+++ b/readme.rm
@@ -65,7 +65,7 @@ At RVS, we bring the precision of software development into fashion design:
 ## 📸 Collection Preview
 
 <div align="center">
-  <img src="assets/collection-preview.jpg" alt="RVS Collection" width="800"/>
+  <img src="assets/collection-preview.gif" alt="RVS Collection" width="800"/>
 </div>
 
 ## 🛠️ Technology Stack
@@ -76,15 +76,6 @@ At RVS, we bring the precision of software development into fashion design:
 - Analytics: Google Analytics
 - CI/CD: GitHub Actions
 
-## 📝 Contributing
-
-We welcome contributions from the community! If you'd like to contribute, please:
-
-1. Fork the repository
-2. Create your feature branch (`git checkout -b feature/AmazingFeature`)
-3. Commit your changes (`git commit -m 'Add some AmazingFeature'`)
-4. Push to the branch (`git push origin feature/AmazingFeature`)
-5. Open a Pull Request
 
 ## 📫 Contact Us
 
