--- a/readme.rm
+++ b/readme.rm
@@ -27,7 +27,7 @@ At RVS, we bring the precision of software development into fashion design:
 
 ## 👥 Meet Our Team
 
-| [![Gonçalo Rio](assets/goncalo.jpg)](https://github.com/username1) | [![Ana Vale](assets/ana.jpg)](https://github.com/username2) | [![Licínio Sousa](assets/licinio.jpg)](https://github.com/username3) |
+| [![Gonçalo Rio](https://github.com/Licinio14/rvs/blob/main/assets/goncalo.jpg)](https://github.com/username1) | [![Ana Vale](assets/ana.jpg)](https://github.com/username2) | [![Licínio Sousa](assets/licinio.jpg)](https://github.com/username3) |
 |:---:|:---:|:---:|
 | **Gonçalo Rio** | **Ana Vale** | **Licínio Sousa** |
 
