--- a/readme.rm
+++ b/readme.rm
@@ -25,7 +25,7 @@ At RVS, we bring the precision of software development into fashion design:
 
 ## 👥 Meet Our Team
 
-| ![Gonçalo Rio](https://raw.githubusercontent.com/yourusername/RVS/main/images/1.jpg) | ![Ana Vale](https://raw.githubusercontent.com/yourusername/RVS/main/images/2.jpg) | ![Licínio Sousa](https://raw.githubusercontent.com/yourusername/RVS/main/images/3.jpg) |
+| ![Gonçalo Rio](https://github.com/Licinio14/rvs/blob/main/assets/goncalo.jpg) | ![Ana Vale](assets/ana.jpg) | ![Licínio Sousa](https://raw.githubusercontent.com/yourusername/RVS/main/images/3.jpg) |
 |:---:|:---:|:---:|
 | **Gonçalo Rio** | **Ana Vale** | **Licínio Sousa** |
 
