--- a/readme.rm
+++ b/readme.rm
@@ -26,9 +26,9 @@ At RVS, we bring the precision of software development into fashion design:
 ## 👥 Meet Our Team
 
 <p align="center">
-  <img src="assets/Goncalo.png" width="250" alt="Gonçalo Rio">
-  <img src="assets/ana.png" width="250" alt="Ana Vale">
-  <img src="assets/licinio.png" width="250" alt="Licínio Sousa">
+  <img src="assets/Goncalo.jpg" width="250" alt="Gonçalo Rio">
+  <img src="assets/ana.jpg" width="250" alt="Ana Vale">
+  <img src="assets/licinio.jpg" width="250" alt="Licínio Sousa">
 </p>
 
 <p align="center">
@@ -47,7 +47,7 @@ At RVS, we bring the precision of software development into fashion design:
 ## 📸 Our Brand
 
 <p align="center">
-  <img src="https://raw.githubusercontent.com/yourusername/RVS/main/images/4.jpg" alt="RVS Logo">
+  <img src="logo.png" alt="RVS Logo">
 </p>
 
 ## 📫 Contact Us
